# pyArtifact

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.readthedocs.txt  requirements.txt  rtd-requirements.txt  setup.py  tox.ini
docs/source/: api_cards.rst  api_deck.rst  api_encoding.rst  api_filtering.rst  api_sets_and_cards.rst  conf.py  index.rst  overview.rst  releasenotes.rst
releasenotes/: config.yaml
releasenotes/notes/: deck_encoding-3381ef0389762ab7.yaml  deck_object-7893bcae3de80a26.yaml  language-cbd8e7099d0b4328.yaml  shared_names-4134ed7d35f81c26.yaml  various-86c884abac81d7dc.yaml
src/pyartifact/: __init__.py  _context.py  api_sync.py  context.py  deck.py  exceptions.py  filtering.py  sets_and_cards.py
src/pyartifact/deck_encoding/: decode.py  encode.py  types.py
src/pyartifact/types/: deck_types.py  json_types.py
tests/: conftest.py  test_pyartifact.py
