[tool.poetry]
name = "pyArtifact"
version = "0.3.2"
license = "MIT"
description = "Pythonic wrapper around Valve's Artifact API"
authors = ["David Jetelina <david@djetelina.cz>"]
repository = "https://github.com/iscre4m/pyartifact"
homepage = "https://github.com/iscre4m/pyartifact"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.20"
mypy_extensions = "^0.4.1"
fuzzywuzzy = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"
sphinx_rtd_theme = "^0.4.2"
sphinx = "^1.8"
sphinx-autodoc-typehints = "^1.5"
reno = {version = "^2.11",extras = ["sphinx"]}
poetry-setup = "^0.3.6"
